--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,16 +1,48 @@
-// http://ionicframework.com/docs/theming/
+// .menuStyle{
+//   background-color: color($colors, dark);
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-around;
+// }
 
 
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
+.logoStyle{
+  font-size: 36px;
+  font-weight: bold;
+  // padding: 20px 5px !important;
+  margin: 20px 0px;
+
+}
+
+.arrowStyle{
+  transition: all .2s ease-in-out;
+  padding: 0px 5px;
+}
+
+.buttonStyle{
+  background-color: color($colors, dark);
+
+  &:hover{
+    background-color: color($colors, light);
+    color: color($colors, dark);
+    cursor: pointer;
+
+    .arrowStyle{
+      color: color($colors, dark);
+      transform: scale(2.2);
+    }
+  }
+}
+
+.icon{
+  font-size: 25px;
+}
+
+.nameStyle{
+  color: color($colors, primary);
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+  padding-left: 5px;
+  padding-bottom: 3px;
+}
